--- a/Client/src/App.scss
+++ b/Client/src/App.scss
@@ -55,7 +55,7 @@ a {
 
 @media (hover: hover) {
     a:hover {
-        color: rgba(255,255,255,.6);;
+        color: rgba(255,255,255,.6);
     }
 }
 
